@@ -3,6 +3,9 @@ Thu Nov 26 11:12:41 CET 2009 Denis Barbier <barbier@users.sourceforge.net>
 	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java
 	  src/org/jcae/mesh/amibe/ds/HalfEdge.java (split): Add a reference
 	on the new vertex if edge is tagged as a boundary or a sharp edge.
+	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java
+	  src/org/jcae/mesh/amibe/ds/HalfEdge.java (checkSwap3D): Edges
+	with two endpoints on inner boundaries are ranked lower.
 
 Wed Nov 25 22:34:35 CET 2009 Denis Barbier <barbier@users.sourceforge.net>
 
